--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "case": "^1.6.3",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "js-levenshtein": "^1.1.6",
+    "prettier": "^2.5.1",
+    "recast": "^0.20.5",
+    "stemmer": "^2.0.0",
+    "vue": "^3.2.26",
+    "vue-monaco": "^1.2.2"
   },
   "devDependencies": {
+    "@types/js-levenshtein": "^1.1.1",
+    "@types/prettier": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.26",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
@@ -30,7 +38,7 @@
     "lint-staged": "^9.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5"
+    "typescript": "~4.5.4"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
