--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "case": "^1.6.3",
     "core-js": "^3.6.5",
     "js-levenshtein": "^1.1.6",
+    "jscodeshift": "^0.13.0",
     "prettier": "^2.5.1",
     "recast": "^0.20.5",
     "stemmer": "^2.0.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/js-levenshtein": "^1.1.1",
+    "@types/jscodeshift": "^0.11.3",
     "@types/prettier": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
