--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   },
   "dependencies": {
     "case": "^1.6.3",
+    "codemirror": "^5.65.0",
     "core-js": "^3.6.5",
     "js-levenshtein": "^1.1.6",
     "jscodeshift": "^0.13.0",
     "prettier": "^2.5.1",
     "recast": "^0.20.5",
     "stemmer": "^2.0.0",
-    "vue": "^3.2.26",
-    "vue-monaco": "^1.2.2"
+    "vue": "^3.2.26"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.5",
     "@types/js-levenshtein": "^1.1.1",
     "@types/jscodeshift": "^0.11.3",
     "@types/prettier": "^2.4.2",
@@ -31,12 +32,12 @@
     "@vue/compiler-sfc": "^3.2.26",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^6.7.2",
+    "eslint": "7.32.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "8.0.0",
     "lint-staged": "^9.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
