--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-codemod",
+  "name": "@vue-codemod/playground",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
@@ -7,9 +7,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue-codemod/option-composition": "workspace:^0.0.1",
+    "codemirror": "^5.65.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.5",
+    "@types/node": "^17.0.8",
+    "@vitejs/plugin-vue": "^2.0.0",
+    "assert": "^2.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
