--- a/.github/workflows/gitpage.yml
+++ b/.github/workflows/gitpage.yml
@@ -2,7 +2,7 @@ name: GitHub Actions Build and Deploy playground
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
