--- a/.github/workflows/gitpage.yml
+++ b/.github/workflows/gitpage.yml
@@ -9,6 +9,16 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      
+    - name: Setup node
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2
+      with:
+          version: latest
 
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@v4.2.2
