--- a/.github/workflows/gitpage.yml
+++ b/.github/workflows/gitpage.yml
@@ -19,6 +19,9 @@ jobs:
       uses: pnpm/action-setup@v2
       with:
           version: latest
+        
+    - name: Build website
+      run: playground:build
 
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@v4.2.2
