--- a/.github/workflows/gitpage.yml
+++ b/.github/workflows/gitpage.yml
@@ -19,6 +19,9 @@ jobs:
       uses: pnpm/action-setup@v2
       with:
           version: latest
+    
+    - name: Install dependencies
+      run: pnpm i
         
     - name: Build website
       run: pnpm playground:build
